--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -110,6 +110,19 @@
       </property>
      </widget>
     </item>
+    <item row="5" column="0" colspan="4">
+     <widget class="QLabel" name="errorLabel">
+      <property name="styleSheet">
+       <string notr="true">color: #ff4343;</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
